--- a/Pipfile
+++ b/Pipfile
@@ -1,7 +1,7 @@
 [[source]]
-url = "https://pypi.python.org/simple"
+url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
 verify_ssl = true
-name = "pypi"
+name = "tsinghua"
 
 [dev-packages]
 faker = "*"
